update ML scripts

--- a/src/R/R101_MachineLearning.Rmd
+++ b/src/R/R101_MachineLearning.Rmd
@@ -8,27 +8,23 @@ output: html_document
 Let's do some preparation for the class by running the following chunk of codes
 
 ```{r setup}
-#set up rmd 
-knitr::opts_chunk$set(message=F,
-                      warning=F,
-                      echo=F,
-                      fig.width=8,
-                      fig.height=5)
-
 #load packages
-pacman::p_load(tidyverse,
-               pROC,
-               PRROC,
-               # party,
-               rpart,rpart.plot,
-               randomForest)
+pacman::p_load(
+  tidyverse,
+  pROC,
+  PRROC,
+  # party,
+  rpart,rpart.plot,
+  randomForest
+)
 ```
 
 Load the analytic dataset used previously for the ALS cohort:  
 
 ```{r}
 #load data
-aset<-readRDS("C:/Users/Administrator/Documents/classHMI7001/data/final_set.rda") %>%
+aset<-readRDS("C:/Users/Administrator/Documents/proj/data/final_set2.rda") %>%
+  mutate(MORT_1YR = case_when(OUTCOME_STATUS==1&DAYS_ALS1DX_TO_OUTCOME<=365~1,TRUE~0)) %>%
   mutate(SEX_F = case_when(SEX=='F' ~ 1,
                            TRUE ~ 0)) %>%
   filter(!is.na(MORT_1YR)) %>%
@@ -38,9 +34,11 @@ aset<-readRDS("C:/Users/Administrator/Documents/classHMI7001/data/final_set.rda"
 Recall from the "Regression" and "Feature Selection" classes, where we tried to build a multiple logistic regression model to better predict the chances or 1-year mortality. In other words, we want to build a model that can best separate cases with high-risk of passing on within a year vs. those with lower-risk (risk stratification).   
 
 ```{r}
-fit_lr<-glm(formula = MORT_1YR ~ RILUZ_DUR + RILUZ_IND + AGE_AT_ALS1DX, 
-            data = aset,
-            family = binomial())
+fit_lr<-glm(
+  formula = MORT_1YR ~ RILUZOLE_DUR + RILUZOLE_IND + AGE_AT_DX_DATE1 + BMI, 
+  data = aset,
+  family = binomial()
+)
 
 # model summary
 summary(fit_lr)
@@ -84,9 +82,10 @@ Let's first clarify some terms used with decision trees:
 
 
 ```{r tree_model,fig.width=10,fig.height=6}
-fit_tree<-rpart(formula = MORT_1YR ~ AGE_AT_ALS1DX + SEX_F + RILUZ_IND + RILUZ_DUR + RACE, 
-                data = aset,method="class")
-
+fit_tree<-rpart(
+  formula = MORT_1YR ~ RILUZOLE_DUR + RILUZOLE_IND + AGE_AT_DX_DATE1 + BMI, 
+  data = aset,method="class"
+)
 rpart.plot(fit_tree)
 ```
 
@@ -97,24 +96,34 @@ rpart.plot(fit_tree)
 
 
 ```{r}
-tree_ctrl<-rpart.control(minsplit = 4,
-                         minbucket = 5,
-                         maxdepth = 3,
-                         cp = 0)
+tree_ctrl<-rpart.control(
+  minsplit = 4,
+  minbucket = 5,
+  maxdepth = 3,
+  cp = 0
+)
 
-fit_tree<-rpart(formula = MORT_1YR ~ AGE_AT_ALS1DX + SEX_F + RILUZ_IND + RILUZ_DUR + RACE, 
-                data = aset, method = "class",
-                control = tree_ctrl
-                )
+fit_tree<-rpart(
+  formula = MORT_1YR ~ RILUZOLE_DUR + RILUZOLE_IND + AGE_AT_DX_DATE1 + BMI, 
+  data = aset, 
+  method = "class",
+  control = tree_ctrl
+)
 rpart.plot(fit_tree)
 ```
 
 Let's compare the prediction result between the LR and Tree model
 
 ```{r}
-tree_pred<-matrix(unlist(predict(fit_tree,
-                                 newdata=aset[,c('AGE_AT_ALS1DX','SEX_F','RILUZ_IND','RILUZ_DUR','RACE')],
-                                 type="prob")), nrow=nrow(aset), byrow=T)
+tree_pred<-matrix(
+  unlist(predict(
+    fit_tree,
+    newdata=aset[,c('AGE_AT_DX_DATE1','BMI','RILUZOLE_IND','RILUZOLE_DUR')],
+    type="prob")
+  ), 
+  nrow=nrow(aset), 
+  byrow=T
+)
 fit_tree_roc<-pROC::roc(aset$MORT_1YR,tree_pred[,2])
 
 pROC::ggroc(list(Regression=fit_lr_roc,
@@ -138,35 +147,41 @@ Random Forest is **an ensemble** of multiple decision trees. An ensemble is simp
 ```{r fit_rf}
 aset<-aset %>% mutate(MORT_1YR_fac = as.factor(MORT_1YR))
 
-fit_rf10<-randomForest(MORT_1YR_fac ~ AGE_AT_ALS1DX + SEX_F + RILUZ_IND + RILUZ_DUR + RACE, 
-                       data=aset,keep.forest = T, proximity = T, importance=T,
-                       ntree = 10, mtry=0.8)
+fit_rf10<-randomForest(
+  MORT_1YR_fac ~ RILUZOLE_DUR + RILUZOLE_IND + AGE_AT_DX_DATE1 + BMI, 
+  data=aset,keep.forest = T, proximity = T, importance=T,
+  ntree = 10, mtry=0.8
+)
 
-fit_rf50<-randomForest(MORT_1YR_fac ~ AGE_AT_ALS1DX + SEX_F + RILUZ_IND + RILUZ_DUR + RACE, 
-                       data=aset, keep.forest = T, proximity = T, importance=T,
-                       ntree = 50, mtry=0.8)
+fit_rf50<-randomForest(
+  MORT_1YR_fac ~ RILUZOLE_DUR + RILUZOLE_IND + AGE_AT_DX_DATE1 + BMI, 
+  data=aset, keep.forest = T, proximity = T, importance=T,
+  ntree = 50, mtry=0.8
+)
 
-fit_rf200<-randomForest(MORT_1YR_fac ~ AGE_AT_ALS1DX + SEX_F + RILUZ_IND + RILUZ_DUR + RACE, 
-                        data=aset, keep.forest = T, proximity = T, importance=T,
-                        ntree = 200, mtry=0.8)
+fit_rf200<-randomForest(
+  MORT_1YR_fac ~ RILUZOLE_DUR + RILUZOLE_IND + AGE_AT_DX_DATE1 + BMI,
+  data=aset, keep.forest = T, proximity = T, importance=T,
+  ntree = 200, mtry=0.8
+)
 ```
 
 
 ```{r}
 rf10_pred<-predict(fit_rf10,
-                   newdata=aset[,c('AGE_AT_ALS1DX','SEX_F','RILUZ_IND','RILUZ_DUR','RACE')],
+                   newdata=aset[,c('AGE_AT_DX_DATE1','BMI','RILUZOLE_IND','RILUZOLE_DUR')],
                    type="prob")
 fit_rf10_roc<-pROC::roc(aset$MORT_1YR_fac,rf10_pred[,2])
 #========================================
 
 rf50_pred<-predict(fit_rf50,
-                   newdata=aset[,c('AGE_AT_ALS1DX','SEX_F','RILUZ_IND','RILUZ_DUR','RACE')],
+                   newdata=aset[,c('AGE_AT_DX_DATE1','BMI','RILUZOLE_IND','RILUZOLE_DUR')],
                    type="prob")
 fit_rf50_roc<-pROC::roc(aset$MORT_1YR_fac,rf50_pred[,2])
 #========================================
 
 rf200_pred<-predict(fit_rf200,
-                    newdata=aset[,c('AGE_AT_ALS1DX','SEX_F','RILUZ_IND','RILUZ_DUR','RACE')],
+                    newdata=aset[,c('AGE_AT_DX_DATE1','BMI','RILUZOLE_IND','RILUZOLE_DUR')],
                     type="prob")
 fit_rf200_roc<-pROC::roc(aset$MORT_1YR_fac,rf200_pred[,2])
 #========================================
@@ -219,18 +234,24 @@ test<-aset[!train_ind,]
 Let's first use this validation strategy to train and test all the 6 models we just developed.
 
 ```{r reg_val}
-fit_reg_tr<-glm(MORT_1YR ~ RILUZ_DUR + RILUZ_IND + AGE_AT_ALS1DX,
-                data=train,
-                family=binomial())
+fit_reg_tr<-glm(
+  MORT_1YR ~ RILUZOLE_DUR + RILUZOLE_IND + AGE_AT_DX_DATE1,
+  data=train,
+  family=binomial()
+)
 
-reg_tr_pred<-predict(fit_reg_tr,
-                     newdata = train[,c('AGE_AT_ALS1DX','RILUZ_IND','RILUZ_DUR')],
-                     type="response")
+reg_tr_pred<-predict(
+  fit_reg_tr,
+  newdata = train[,c('AGE_AT_DX_DATE1','RILUZOLE_IND','RILUZOLE_DUR')],
+  type="response"
+)
 fit_reg_tr_roc<-pROC::roc(train$MORT_1YR,reg_tr_pred)
 
-reg_ts_pred<-predict(fit_reg_tr,
-                     newdata = test[,c('AGE_AT_ALS1DX','RILUZ_IND','RILUZ_DUR')],
-                     type="response")
+reg_ts_pred<-predict(
+  fit_reg_tr,
+  newdata = test[,c('AGE_AT_DX_DATE1','RILUZOLE_IND','RILUZOLE_DUR')],
+  type="response"
+)
 fit_reg_ts_roc<-pROC::roc(test$MORT_1YR,reg_ts_pred)
 
 #========================================
@@ -252,18 +273,27 @@ pROC::ggroc(list(Regression_tr=fit_reg_tr_roc,
 
 
 ```{r tree_val}
-fit_tree<-rpart(formula = MORT_1YR ~ AGE_AT_ALS1DX + SEX_F + RILUZ_IND + RILUZ_DUR + RACE, 
-                data = train, method = "class"
-                )
+fit_tree<-rpart(
+  formula = MORT_1YR ~ RILUZOLE_DUR + RILUZOLE_IND + AGE_AT_DX_DATE1 + BMI, 
+  data = train, method = "class"
+)
 # rpart.plot(fit_tree)
 
-tree_tr_pred<-matrix(unlist(predict(fit_tree,
-                                    newdata=train[,c('AGE_AT_ALS1DX','SEX_F','RILUZ_IND','RILUZ_DUR','RACE')],
-                                    type="prob")), nrow=nrow(train), byrow=T)
+tree_tr_pred<-matrix(
+  unlist(predict(fit_tree,
+                 newdata=train[,c('AGE_AT_DX_DATE1','BMI','RILUZOLE_IND','RILUZOLE_DUR')],
+                 type="prob")), 
+  nrow=nrow(train), 
+  byrow=T
+)
 
-tree_ts_pred<-matrix(unlist(predict(fit_tree,
-                                    newdata=test[,c('AGE_AT_ALS1DX','SEX_F','RILUZ_IND','RILUZ_DUR','RACE')],
-                                    type="prob")), nrow=nrow(test), byrow=T)
+tree_ts_pred<-matrix(
+  unlist(predict(fit_tree,
+                 newdata=test[,c('AGE_AT_DX_DATE1','BMI','RILUZOLE_IND','RILUZOLE_DUR')],
+                 type="prob")),
+  nrow=nrow(test), 
+  byrow=T
+)
 
 fit_tree_tr_roc<-pROC::roc(train$MORT_1YR,tree_tr_pred[,2])
 fit_tree_ts_roc<-pROC::roc(test$MORT_1YR,tree_ts_pred[,2])
@@ -278,40 +308,63 @@ pROC::ggroc(list(Decision_Tree_tr=fit_tree_tr_roc,
 
 
 ```{r rf_val}
-fit_rf10<-randomForest(MORT_1YR_fac ~ AGE_AT_ALS1DX + SEX_F + RILUZ_IND + RILUZ_DUR + RACE, 
-                     data=train,ntree = 10, mtry=0.8, keep.forest = T, proximity = T, importance=T)
-rf10_pred_tr<-predict(fit_rf10,
-                      newdata=train[,c('AGE_AT_ALS1DX','SEX_F','RILUZ_IND','RILUZ_DUR','RACE')],
-                      type="prob")
-rf10_pred_ts<-predict(fit_rf10,
-                      newdata=test[,c('AGE_AT_ALS1DX','SEX_F','RILUZ_IND','RILUZ_DUR','RACE')],
-                      type="prob")
+fit_rf10<-randomForest(
+  MORT_1YR_fac ~ RILUZOLE_DUR + RILUZOLE_IND + AGE_AT_DX_DATE1 + BMI, 
+  data=train,ntree = 10, mtry=0.8, 
+  keep.forest = T, proximity = T, importance=T
+)
+rf10_pred_tr<-predict(
+  fit_rf10,
+  newdata=train[,c('AGE_AT_DX_DATE1','BMI','RILUZOLE_IND','RILUZOLE_DUR')],
+  type="prob"
+)
+rf10_pred_ts<-predict(
+  fit_rf10,
+  newdata=test[,c('AGE_AT_DX_DATE1','BMI','RILUZOLE_IND','RILUZOLE_DUR')],
+  type="prob"
+)
 
 fit_rf10_tr_roc<-pROC::roc(train$MORT_1YR_fac,rf10_pred_tr[,2])
 fit_rf10_ts_roc<-pROC::roc(test$MORT_1YR_fac,rf10_pred_ts[,2])
 #=================================================
 
-fit_rf50<-randomForest(MORT_1YR_fac ~ AGE_AT_ALS1DX + SEX_F + RILUZ_IND + RILUZ_DUR + RACE, 
-                     data=train,ntree = 50, mtry=0.8, keep.forest = T, proximity = T, importance=T)
-rf50_pred_tr<-predict(fit_rf50,
-                      newdata=train[,c('AGE_AT_ALS1DX','SEX_F','RILUZ_IND','RILUZ_DUR','RACE')],
-                      type="prob")
-rf50_pred_ts<-predict(fit_rf50,
-                      newdata=test[,c('AGE_AT_ALS1DX','SEX_F','RILUZ_IND','RILUZ_DUR','RACE')],
-                      type="prob")
+fit_rf50<-randomForest(
+  MORT_1YR_fac ~ RILUZOLE_DUR + RILUZOLE_IND + AGE_AT_DX_DATE1 + BMI,
+  data=train,ntree = 50, mtry=0.8, 
+  keep.forest = T, proximity = T, 
+  importance=T
+)
+rf50_pred_tr<-predict(
+  fit_rf50,
+  newdata=train[,c('AGE_AT_DX_DATE1','BMI','RILUZOLE_IND','RILUZOLE_DUR')],
+  type="prob"
+)
+rf50_pred_ts<-predict(
+  fit_rf50,
+  newdata=test[,c('AGE_AT_DX_DATE1','BMI','RILUZOLE_IND','RILUZOLE_DUR')],
+  type="prob"
+)
 
 fit_rf50_tr_roc<-pROC::roc(train$MORT_1YR_fac,rf50_pred_tr[,2])
 fit_rf50_ts_roc<-pROC::roc(test$MORT_1YR_fac,rf50_pred_ts[,2])
 #=================================================
 
-fit_rf200<-randomForest(MORT_1YR_fac ~ AGE_AT_ALS1DX + SEX_F + RILUZ_IND + RILUZ_DUR + RACE, 
-                     data=train,ntree = 200, mtry=0.8, keep.forest = T, proximity = T, importance=T)
-rf200_pred_tr<-predict(fit_rf200,
-                      newdata=train[,c('AGE_AT_ALS1DX','SEX_F','RILUZ_IND','RILUZ_DUR','RACE')],
-                      type="prob")
-rf200_pred_ts<-predict(fit_rf200,
-                      newdata=test[,c('AGE_AT_ALS1DX','SEX_F','RILUZ_IND','RILUZ_DUR','RACE')],
-                      type="prob")
+fit_rf200<-randomForest(
+  MORT_1YR_fac ~ RILUZOLE_DUR + RILUZOLE_IND + AGE_AT_DX_DATE1 + BMI,
+  data=train,ntree = 200, mtry=0.8, 
+  keep.forest = T, proximity = T, 
+  importance=T
+)
+rf200_pred_tr<-predict(
+  fit_rf200,
+  newdata=train[,c('AGE_AT_DX_DATE1','BMI','RILUZOLE_IND','RILUZOLE_DUR')],
+  type="prob"
+)
+rf200_pred_ts<-predict(
+  fit_rf200,
+  newdata=test[,c('AGE_AT_DX_DATE1','BMI','RILUZOLE_IND','RILUZOLE_DUR')],
+  type="prob"
+)
 
 fit_rf200_tr_roc<-pROC::roc(train$MORT_1YR_fac,rf200_pred_tr[,2])
 fit_rf200_ts_roc<-pROC::roc(test$MORT_1YR_fac,rf200_pred_ts[,2])
@@ -354,48 +407,4 @@ pROC::ggroc(list(Regression=fit_reg_ts_roc,
                          ))
 ```
 
-How about calibration? 
 
-```{r}
-# source: https://github.com/sxinger/utils/blob/master/analysis_util.R
-get_calibr<-function(pred,real,n_bin=20){
-  calib<-data.frame(pred=pred,
-                    y=real) %>%
-    arrange(pred) %>%
-    dplyr::mutate(pred_bin = cut(pred,
-                                 breaks=unique(quantile(pred,0:(n_bin)/(n_bin))),
-                                 include.lowest=T,
-                                 labels=F)) %>%
-    ungroup %>% group_by(pred_bin) %>%
-    dplyr::summarize(expos=n(),
-                     bin_lower=min(pred),
-                     bin_upper=max(pred),
-                     bin_mid=median(pred),
-                     y_agg = sum(y),
-                     pred_p = mean(pred),
-                     .groups = "drop") %>%
-    dplyr::mutate(y_p=y_agg/expos) %>%
-    dplyr::mutate(binCI_lower = pmax(0,pred_p-1.96*sqrt(y_p*(1-y_p)/expos)),
-                  binCI_upper = pred_p+1.96*sqrt(y_p*(1-y_p)/expos))
-  
-  return(calib)
-}
-```
-
-
-```{r}
-# assume there is no row reordering
-fit_reg_calib<-get_calibr(pred=reg_ts_pred,real=test$MORT_1YR,n_bin=10) %>% mutate(model="regression")
-fit_tree_calib<-get_calibr(pred=tree_ts_pred[,2],real=test$MORT_1YR,n_bin=10) %>% mutate(model="tree")
-fit_rf_calib<-get_calibr(pred=rf200_pred_ts[,2],real=test$MORT_1YR,n_bin=10) %>% mutate(model="rf")
-
-calib_df<-fit_reg_calib %>%
-  bind_rows(fit_tree_calib) %>%
-  bind_rows(fit_rf_calib)
-
-ggplot(calib_df,aes(x=pred_p,y=y_p,color=model))+
-  geom_point() +
-  geom_smooth(method='lm',formula='y~x')+
-  geom_abline(intercept = 0, slope = 1)
-  
-```
