--- a/src/R/R101_Intro2Rmd.Rmd
+++ b/src/R/R101_Intro2Rmd.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Introduction to R-markdown"
 author: "Xing Song"
-date: "10/04/2022"
+date: "`r Sys.Date()`"
 output: html_document
 ---
 
