--- a/src/R/R101_Regression.Rmd
+++ b/src/R/R101_Regression.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Regression Data Analysis"
 author: "Xing Song"
-date: "10/29/2022"
+date: "04/17/2025"
 output: html_document
 ---
 
@@ -12,7 +12,7 @@ Let's do some preparation for the class by running the following chunk of codes
 pacman::p_load(tidyverse,pROC)
 
 #load data
-aset<-readRDS("C:/Users/Administrator/Documents/proj/data/final_set2.rda")
+aset<-readRDS("C:/project/data/als_aset2.rda")
 ```
 
 
