--- a/src/R/R101_ModelSelection.Rmd
+++ b/src/R/R101_ModelSelection.Rmd
@@ -15,7 +15,8 @@ pacman::p_load(
 )
 
 #load data
-aset<-readRDS("C:/project/data/als_aset2.rda")
+aset<-readRDS("C:/project/data/als_aset2.rda") %>%
+  mutate(MORT_1YR = case_when(OUTCOME_STATUS==1&DAYS_ALS1DX_TO_OUTCOME<=365~1,TRUE~0))
 ```
 
 **************************************************************************************************
