--- a/src/R/R101_ModelSelection.Rmd
+++ b/src/R/R101_ModelSelection.Rmd
@@ -16,7 +16,8 @@ pacman::p_load(
 
 #load data
 aset<-readRDS("C:/project/data/als_aset2.rda") %>%
-  mutate(MORT_1YR = case_when(OUTCOME_STATUS==1&DAYS_ALS1DX_TO_OUTCOME<=365~1,TRUE~0))
+  mutate(MORT_1YR = case_when(OUTCOME_STATUS==1&DAYS_ALS1DX_TO_OUTCOME<=365~1,TRUE~0)) %>%
+  mutate(SEX_F = case_when(SEX=='F'~1, TRUE~0))
 ```
 
 **************************************************************************************************
